[package]
name = "tddos_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"

anyhow = "1.0.55"
pretty_env_logger = "0.4.0"
log = "0.4.14"

dns-lookup = "1.0.8"
portpicker = "0.1.1"
local-ip-address = "0.4.4"
online = { version = "3.0.1", features = ["sync"] }

rand = "0.8.5"
lazy_static = "1.4.0"